# Rag-Eval-flow

./: .gitignore  README.md  REDEvaluator.py  demo.ipynb  generic_model_eval.py  pyproject.toml  requirements.txt  run.sh
config/: evaluation_config.local.yaml  evaluation_config.yaml  vlm_evaluation_config.yaml
data/: RED6k-toy.jsonl
rag-eval-flow/components/: judge_models.py
rag-eval-flow/utils/: prompts.py
rag_eval_flow/: factory.py  main.py
rag_eval_flow/components/: data_handlers.py  model_wrappers.py
rag_eval_flow/utils/: config_utils.py  data_utils.py  prompts.py
scripts/: visualize.py
scripts/visualizers/: interface.py  md_table_vis.py  text_report.py
src/: __init__.py  factory.py
src/components/: data_handlers.py  judge_models.py  model_wrappers.py
src/utils/: config_utils.py  prompts.py
utils/: prompts.py
